[package]
name = "tau-tower"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["full"] }
http-body-util = "0.1.3"
tokio-util = { version = "0.7.16", features = ["io"] }
futures-util = "0.3.31"
mime_guess = "2.0.5"
anyhow = "1.0.99"
tokio-tungstenite = "0.27.0"
tokio-stream = { version = "0.1.17", features = ["full"] }
