[package]
name = "tau-tower"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
hyper = { version = "1.7.0", features = ["full", "server"] }
hyper-util = { version = "0.1.16", features = ["full"] }
http-body-util = "0.1.3"
futures-util = "0.3.31"
anyhow = "1.0.99"
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls", "rustls", "tokio-rustls", "url"] }
dialoguer = "0.12.0"
serde = { version = "1.0.225", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.9.6"
clap = { version = "4.5.47", features = ["derive"] }
is-ip = "0.1.0"
openssl = { version = "0.10.73", features = ["vendored"] }
inline_colorization = "0.1.6"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"
